--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -59,7 +59,9 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="kKo-OH-OH0" secondAttribute="bottom" id="1zo-ho-KN3"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bVS-n5-lgR" secondAttribute="trailing" constant="20" symbolic="YES" id="8BF-lo-Udx"/>
                                                 <constraint firstItem="kKo-OH-OH0" firstAttribute="leading" secondItem="z5q-6f-uc2" secondAttribute="leading" constant="15" id="HcV-U4-Wak"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="m6y-nr-Y3z" secondAttribute="trailing" constant="20" symbolic="YES" id="MSY-3a-j6z"/>
                                                 <constraint firstItem="bVS-n5-lgR" firstAttribute="top" secondItem="m6y-nr-Y3z" secondAttribute="bottom" id="ONL-Qq-Y9N"/>
                                                 <constraint firstItem="m6y-nr-Y3z" firstAttribute="baseline" secondItem="z5q-6f-uc2" secondAttribute="centerY" id="bgm-5v-nOz"/>
                                                 <constraint firstItem="m6y-nr-Y3z" firstAttribute="leading" secondItem="kKo-OH-OH0" secondAttribute="trailing" constant="15" id="d6P-Me-6Dk"/>
