--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="Fwb-c8-22I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="Fwb-c8-22I">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -26,50 +25,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Cz5-hC-AHC">
-                                <rect key="frame" x="0.0" y="20" width="320" height="444"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Cz5-hC-AHC">
+                                <rect key="frame" x="20" y="20" width="280" height="444"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="49"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Song Cell" id="DOd-9u-z9k" customClass="SongCell" customModule="Stingtk" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Song Cell" rowHeight="50" id="DOd-9u-z9k" customClass="SongCell" customModule="Stingtk" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="22" width="280" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DOd-9u-z9k" id="z5q-6f-uc2">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="280" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6y-nr-Y3z">
-                                                    <rect key="frame" x="73.5" y="4" width="37" height="22"/>
+                                                    <rect key="frame" x="57.5" y="7" width="37" height="22"/>
                                                     <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="18"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" image="albumartblank" translatesAutoresizingMaskIntoConstraints="NO" id="kKo-OH-OH0" userLabel="Album Art">
-                                                    <rect key="frame" x="15" y="0.0" width="43.5" height="43.5"/>
+                                                    <rect key="frame" x="8" y="4" width="41.5" height="41.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="kKo-OH-OH0" secondAttribute="height" multiplier="1:1" id="x6e-II-XyS"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVS-n5-lgR">
-                                                    <rect key="frame" x="73.5" y="26" width="43" height="14.5"/>
+                                                    <rect key="frame" x="57.5" y="29" width="43" height="14.5"/>
                                                     <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="kKo-OH-OH0" secondAttribute="bottom" id="1zo-ho-KN3"/>
+                                                <constraint firstAttribute="bottom" secondItem="kKo-OH-OH0" secondAttribute="bottom" constant="4" id="1zo-ho-KN3"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bVS-n5-lgR" secondAttribute="trailing" constant="20" symbolic="YES" id="8BF-lo-Udx"/>
-                                                <constraint firstItem="kKo-OH-OH0" firstAttribute="leading" secondItem="z5q-6f-uc2" secondAttribute="leading" constant="15" id="HcV-U4-Wak"/>
+                                                <constraint firstItem="kKo-OH-OH0" firstAttribute="leading" secondItem="z5q-6f-uc2" secondAttribute="leading" constant="8" id="HcV-U4-Wak"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="m6y-nr-Y3z" secondAttribute="trailing" constant="20" symbolic="YES" id="MSY-3a-j6z"/>
                                                 <constraint firstItem="bVS-n5-lgR" firstAttribute="top" secondItem="m6y-nr-Y3z" secondAttribute="bottom" id="ONL-Qq-Y9N"/>
                                                 <constraint firstItem="m6y-nr-Y3z" firstAttribute="baseline" secondItem="z5q-6f-uc2" secondAttribute="centerY" id="bgm-5v-nOz"/>
-                                                <constraint firstItem="m6y-nr-Y3z" firstAttribute="leading" secondItem="kKo-OH-OH0" secondAttribute="trailing" constant="15" id="d6P-Me-6Dk"/>
+                                                <constraint firstItem="m6y-nr-Y3z" firstAttribute="leading" secondItem="kKo-OH-OH0" secondAttribute="trailing" constant="8" id="d6P-Me-6Dk"/>
                                                 <constraint firstItem="bVS-n5-lgR" firstAttribute="leading" secondItem="m6y-nr-Y3z" secondAttribute="leading" id="hdq-J5-a7d"/>
-                                                <constraint firstItem="kKo-OH-OH0" firstAttribute="top" secondItem="z5q-6f-uc2" secondAttribute="top" id="u2C-qO-oxh"/>
+                                                <constraint firstItem="kKo-OH-OH0" firstAttribute="top" secondItem="z5q-6f-uc2" secondAttribute="top" constant="4" id="u2C-qO-oxh"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <inset key="separatorInset" minX="73.5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="separatorInset" minX="51.5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
                                             <outlet property="albumArtImageView" destination="kKo-OH-OH0" id="uJF-Jn-k1F"/>
                                             <outlet property="artistLabel" destination="bVS-n5-lgR" id="TLX-YG-sQd"/>
@@ -77,15 +76,19 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Fwb-c8-22I" id="pIL-c3-qo5"/>
+                                    <outlet property="delegate" destination="Fwb-c8-22I" id="AAV-rq-Xy5"/>
+                                </connections>
                             </tableView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3dz-YY-dmb" userLabel="iPod Control Visual Effect View">
-                                <rect key="frame" x="0.0" y="415" width="320" height="49"/>
+                                <rect key="frame" x="20" y="415" width="280" height="49"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="yMC-ok-obj">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="280" height="49"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sZG-mG-EaE" userLabel="iPod Play Button">
-                                            <rect key="frame" x="135" y="7" width="50" height="35"/>
+                                            <rect key="frame" x="115" y="7" width="50" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="35" id="BPX-3f-xdK"/>
                                                 <constraint firstAttribute="width" constant="50" id="wRm-t3-fYh"/>
@@ -98,7 +101,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PxR-vj-DWh" userLabel="iPod Previous Button">
-                                            <rect key="frame" x="65" y="7" width="50" height="35"/>
+                                            <rect key="frame" x="54" y="7" width="50" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="4sq-xl-MLF"/>
                                                 <constraint firstAttribute="height" constant="35" id="NPV-Ol-wBz"/>
@@ -111,7 +114,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofe-SA-bsw" userLabel="iPod Next Button">
-                                            <rect key="frame" x="203.5" y="7" width="50" height="35"/>
+                                            <rect key="frame" x="175" y="7" width="50" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="35" id="QaY-ve-KkW"/>
                                                 <constraint firstAttribute="width" constant="50" id="fR9-Jn-eeP"/>
@@ -124,7 +127,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WPY-Zs-yDi" userLabel="Playlist Button">
-                                            <rect key="frame" x="286" y="6.5" width="34" height="36"/>
+                                            <rect key="frame" x="246" y="6.5" width="34" height="36"/>
                                             <inset key="contentEdgeInsets" minX="8" minY="7" maxX="8" maxY="7"/>
                                             <state key="normal" image="load_playlist">
                                                 <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -167,6 +170,9 @@
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cgp-Kx-hgF">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="Fwb-c8-22I" id="KoQ-hk-MC9"/>
+                                        </connections>
                                     </scrollView>
                                     <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zPT-HY-W6c">
                                         <rect key="frame" x="277" y="0.0" width="40" height="20"/>
@@ -214,21 +220,22 @@
                         <color key="backgroundColor" red="1" green="1" blue="0.64694368839263916" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Cz5-hC-AHC" secondAttribute="trailing" id="3f7-IX-b5c"/>
+                            <constraint firstAttribute="trailing" secondItem="Cz5-hC-AHC" secondAttribute="trailing" constant="20" symbolic="YES" id="3f7-IX-b5c"/>
                             <constraint firstItem="CQ8-x6-yNq" firstAttribute="leading" secondItem="iFE-v0-bVO" secondAttribute="leading" id="P8A-Ow-43V"/>
-                            <constraint firstItem="Cz5-hC-AHC" firstAttribute="leading" secondItem="iFE-v0-bVO" secondAttribute="leading" id="TjE-R3-mjL"/>
+                            <constraint firstItem="Cz5-hC-AHC" firstAttribute="leading" secondItem="iFE-v0-bVO" secondAttribute="leading" constant="20" symbolic="YES" id="TjE-R3-mjL"/>
                             <constraint firstItem="EoB-sS-u3i" firstAttribute="top" secondItem="CQ8-x6-yNq" secondAttribute="bottom" id="Wad-zP-sHi"/>
                             <constraint firstItem="CQ8-x6-yNq" firstAttribute="top" secondItem="3dz-YY-dmb" secondAttribute="bottom" id="bv4-5T-BWU"/>
                             <constraint firstItem="Cz5-hC-AHC" firstAttribute="top" secondItem="pGq-Pe-t1g" secondAttribute="bottom" id="ecZ-vA-qMG"/>
                             <constraint firstItem="3dz-YY-dmb" firstAttribute="bottom" secondItem="Cz5-hC-AHC" secondAttribute="bottom" id="l3n-FB-qqf"/>
-                            <constraint firstItem="3dz-YY-dmb" firstAttribute="leading" secondItem="iFE-v0-bVO" secondAttribute="leading" id="nW7-WE-NzA"/>
-                            <constraint firstAttribute="trailing" secondItem="3dz-YY-dmb" secondAttribute="trailing" id="nfs-uN-mo4"/>
+                            <constraint firstItem="3dz-YY-dmb" firstAttribute="leading" secondItem="iFE-v0-bVO" secondAttribute="leading" constant="20" symbolic="YES" id="nW7-WE-NzA"/>
+                            <constraint firstAttribute="trailing" secondItem="3dz-YY-dmb" secondAttribute="trailing" constant="20" symbolic="YES" id="nfs-uN-mo4"/>
                             <constraint firstAttribute="trailing" secondItem="CQ8-x6-yNq" secondAttribute="trailing" id="y0k-rb-p5G"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JS4-QJ-xUA"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="ipodControlVisualEffectView" destination="3dz-YY-dmb" id="IIU-X0-kit"/>
                         <outlet property="ipodPlayButton" destination="sZG-mG-EaE" id="9x9-e7-cES"/>
                         <outlet property="ipodShuffleButton" destination="XKk-I0-XLo" id="pwZ-Fj-BTe"/>
                         <outlet property="playingLabel" destination="zPT-HY-W6c" id="8Zz-35-VlY"/>
@@ -239,7 +246,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="093-u7-AzH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="172.80000000000001" y="33.283358320839582"/>
+            <point key="canvasLocation" x="172.5" y="32.74647887323944"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="atT-D4-pnV">
